feat: clear code and add api for uploading picture(hate sogou
